feat: competitions page added

--- a/resources/scss/common/base/_variables.scss
+++ b/resources/scss/common/base/_variables.scss
@@ -4,14 +4,18 @@
 // COLORS & GRADIENTS
 // =======================
 :root {
-	--clr-primary: ;
-	--clr-secondary: ;
-	--clr-accent: ;
+	--clr-blue-800: hsl(210, 66%, 17%);
+	--clr-blue-700: hsl(210, 65%, 21%);
+	--clr-blue-500: hsl(210, 46%, 33%);
+
+	--clr-orange-500: hsl(13, 95%, 54%);
 
 	--clr-black: hsl(213, 31%, 11%);
 	--clr-grey-300: rgb(183, 183, 183);
 	--clr-grey-100: rgb(238, 238, 238);
 	--clr-white: hsl(0, 0%, 100%);
+
+	--clr-error: hsl(0, 100%, 50%);
 }
 
 // =======================
@@ -20,7 +24,7 @@
 
 // FONTS
 :root {
-	--font-primary: sans-serif;
+	--font-primary: "Inter", sans-serif;
 	--font-secondary: ;
 }
 
@@ -35,7 +39,7 @@
 
 // FONT WEIGHTS
 :root {
-	$font-weight-values: (400, 500, 700);
+	$font-weight-values: (400, 500, 600, 700);
 
 	@each $weight in $font-weight-values {
 		--fw-#{$weight}: #{$weight};
@@ -46,7 +50,7 @@
 // SPACING
 // =======================
 :root {
-	$spacing-values: (1, 4, 8, 12, 16, 20, 24, 32, 48, 64, 96, 160);
+	$spacing-values: (1, 4, 6, 8, 12, 16, 20, 24, 32, 48, 64, 96, 160);
 
 	@each $value in $spacing-values {
 		--space-#{$value}: #{calc($value / 16)}rem;
@@ -64,19 +68,9 @@
 
 // DEFAULT
 :root {
-	--container-default-width: 1600px;
+	--container-default-width: 600px;
 	--container-default-bound-left: 1rem;
 	--container-default-bound-right: 1rem;
-
-	@include styles-above(tablet) {
-		--container-default-bound-left: 1.5rem;
-		--container-default-bound-right: 1.5rem;
-	}
-
-	@include styles-above(desktopS) {
-		--container-default-bound-left: 2rem;
-		--container-default-bound-right: 2rem;
-	}
 }
 
 // =======================
