--- a/resources/scss/common/base/_fonts.scss
+++ b/resources/scss/common/base/_fonts.scss
@@ -1,9 +1,4 @@
 // =======================
 // FONTS
 // =======================
-@font-face {
-	font-family: "";
-	font-weight: 400;
-	font-style: normal;
-	src: url("") format("");
-}
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
