--- a/resources/scss/common/base/_typography.scss
+++ b/resources/scss/common/base/_typography.scss
@@ -17,6 +17,9 @@
 
 .typo-h4 {
 	font-family: var(--font-primary);
+	font-weight: var(--fw-600);
+	font-size: var(--fs-20);
+	line-height: 1.2;
 }
 
 // =======================
@@ -24,14 +27,23 @@
 // =======================
 .typo-body-lg {
 	font-family: var(--font-primary);
+	font-size: var(--fs-16);
+	font-weight: var(--fw-400);
+	line-height: 1.4;
 }
 
 .typo-body-md {
 	font-family: var(--font-primary);
+	font-size: var(--fs-14);
+	font-weight: var(--fw-400);
+	line-height: 1.4;
 }
 
 .typo-body-sm {
 	font-family: var(--font-primary);
+	font-size: var(--fs-12);
+	font-weight: var(--fw-400);
+	line-height: 1.4;
 }
 
 // =======================
@@ -39,4 +51,11 @@
 // =======================
 .typo-button {
 	font-family: var(--font-primary);
+}
+
+// =======================
+// UTILS
+// =======================
+.semibold {
+	font-weight: var(--fw-600);
 }
