--- a/resources/scss/app/components/competitions/_upcommingCompetition.scss
+++ b/resources/scss/app/components/competitions/_upcommingCompetition.scss
@@ -48,7 +48,7 @@
 		justify-content: space-between;
 		gap: var(--space-32);
 
-		& > button {
+		& > a {
 			height: 40px;
 			border-radius: var(--border-radius-5);
 			display: flex;
