--- a/templates/_app/base/layout.twig
+++ b/templates/_app/base/layout.twig
@@ -12,7 +12,7 @@
 
 {% include "_app/base/head" %}
 
-<body x-data="site" class="app-page {{ class }}" {{ attr(attributes) }}>
+<body class="app-page {{ class }}" {{ attr(attributes) }}>
     {% include "_app/components/statusBar" %}
 
     <main class="app-page-main">
