--- a/resources/scss/app/pages/_competitions.scss
+++ b/resources/scss/app/pages/_competitions.scss
@@ -4,6 +4,12 @@
 	&-content {
 		display: flex;
 		flex-direction: column;
-		gap: var(--space-32);
+		gap: var(--space-24);
+	}
+
+	&-main {
+		display: flex;
+		flex-direction: column;
+		gap: var(--space-16);
 	}
 }
