--- a/templates/_app/components/competitions/card.twig
+++ b/templates/_app/components/competitions/card.twig
@@ -14,38 +14,42 @@
 {# ======================= #}
 {# TEMPLATE                #}
 {# ======================= #}
-<a href="{{ href }}">
-    <article class="c-competition-card {{ class }}" {{ attr(attributes) }}>
-        <p class="typo-body-md semibold">{{ date|date("d F Y") }} {{ "om" }} {{ date|date("h:i") }}</p>
+<article class="c-competition-card {{ class }}" {{ attr(attributes) }}>
+    <p class="typo-body-md semibold">{{ date|date("d F Y") }} {{ "om" }} {{ date|date("h:i") }}</p>
 
-        <div class="c-competition-card-matchup">
-            <div class="c-competition-card-team">
-                <p class="typo-body-md semibold">{{ "Thuis"|t }}</p>
-                <p class="typo-body-lg">{{ homeTeam }}</p>
-            </div>
+    <div class="c-competition-card-matchup">
+        <div class="c-competition-card-team">
+            <p class="typo-body-md semibold">{{ "Thuis"|t }}</p>
+            <p class="typo-body-lg">{{ homeTeam }}</p>
+        </div>
 
-            <div class="c-competition-card-team">
-                <p class="typo-body-md semibold">{{ "Bezoekers"|t }}</p>
-                <p class="typo-body-lg">{{ awayTeam }}</p>
+        <div class="c-competition-card-team">
+            <p class="typo-body-md semibold">{{ "Bezoekers"|t }}</p>
+            <p class="typo-body-lg">{{ awayTeam }}</p>
+        </div>
+    </div>
+
+    <div class="c-competition-card-availability">
+        <div class="c-competition-card-availability-top">
+            <p class="typo-body-md">{{ "Beschikbaarheid"|t }}</p>
+
+            <div class="c-competition-card-availability-deadline">
+                {% include "_common/components/icon" with { icon: "exclamation-circle" } only %}
+
+                <p class="typo-body-md">{{ "Ten laatste invullen tegen"|t }} {{ availabilityDeadline|date("d F Y") }}</p>
             </div>
         </div>
 
-        <div class="c-competition-card-availability">
-            <div class="c-competition-card-availability-top">
-                <p class="typo-body-md">{{ "Beschikbaarheid"|t }}</p>
-
-                <div class="c-competition-card-availability-deadline">
-                    {% include "_common/components/icon" with { icon: "exclamation-circle" } only %}
-
-                    <p class="typo-body-md">{{ "Ten laatste invullen tegen"|t }} {{ availabilityDeadline|date("d F Y") }}</p>
-                </div>
+        <div class="c-competition-card-availability-main">
+            <div class="c-competition-card-availability-actions">
+                <button @click.prevent class="typo-body-md">{{ "Beschikbaar"|t }}</button>
+                <button @click.prevent class="typo-body-md">{{ "Niet beschikbaar"|t }}</button>
+                <button @click.prevent class="typo-body-md">{{ "Reserve"|t }}</button>
             </div>
 
-            <div class="c-competition-card-availability-main">
-                <button class="typo-body-md">{{ "Beschikbaar"|t }}</button>
-                <button class="typo-body-md">{{ "Niet beschikbaar"|t }}</button>
-                <button class="typo-body-md">{{ "Reserve"|t }}</button>
-            </div>
+            <a href="{{ href }}" class="typo-body-md semibold nowrap">
+                {{ "Meer info"|t }}
+            </a>
         </div>
-    </article>
-</a>
+    </div>
+</article>
