--- a/templates/_app/components/statusBar.twig
+++ b/templates/_app/components/statusBar.twig
@@ -9,6 +9,6 @@
 {# ======================= #}
 <header class="c-status-bar container {{ class }}" {{ attr(attributes) }}>
     <div class="c-status-bar-content">
-        <p class="typo-body-md">{{ currentUser.fullName }}</p>    
+        <p class="typo-body-lg">{{ currentUser.fullName }}</p>    
     </div>
 </header>
