nieuwe aanpassingen by me

--- a/resources/scss/app/components/_index.scss
+++ b/resources/scss/app/components/_index.scss
@@ -2,5 +2,7 @@
 // COMPONENT MODULES
 // =======================
 @forward "competitions";
+@forward "drinks";
 
+@forward "drinksButton";
 @forward "statusBar";
