--- a/resources/scss/app/components/_statusBar.scss
+++ b/resources/scss/app/components/_statusBar.scss
@@ -5,5 +5,15 @@
 	align-items: center;
 
 	&-content {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		align-items: center;
 	}
+}
+
+.c-icon {
+	width: 40px;
+	height: 40px;
+	fill: var(--clr-orange-500);
 }
