fixed images not working and start of alpine

--- a/resources/scss/app/components/_drinksButton.scss
+++ b/resources/scss/app/components/_drinksButton.scss
@@ -21,6 +21,7 @@
 
     .c-icon {
         padding-left: 2px;
+        padding-top: 2px;
         width: 30px;
         height: 30px;
         fill: white;
