--- a/resources/scss/app/components/drinks/_card.scss
+++ b/resources/scss/app/components/drinks/_card.scss
@@ -12,7 +12,7 @@
     }
 
     &__image {
-        background-color: var(--clr-blue-500); // 30%
+        background-color: var(--clr-blue-500);
         aspect-ratio: 4/3;
         width: 100%;
         display: flex;
