--- a/templates/_app/components/drinks/list.twig
+++ b/templates/_app/components/drinks/list.twig
@@ -11,8 +11,8 @@
     {% for drink in drinks %}
         {% include "_app/components/drinks/card" with {
             title: drink.title,
-            price: drink.priceField ?? "",
-            image: drink.imageField.one ?? null
+            price: drink.priceField2 ?? "",
+            image: drink.thumbnailField.one ?? null
         } %}
     {% else %}
         <p class="drinks-list__empty">Geen dranken gevonden.</p>
